# AI-HR

./: .gitignore  AI-HR业务逻辑梳理.md  README.md
backend/: .env.example  .gitignore  README.md  app.py  department.py  employee.py  jd.py  main.py  mock_data.py  okr.py  requirements.txt  start.bat  start.sh  test_resume.txt
backend/aihr/: pom.xml
backend/config/: __init__.py  database.py  openai_client.py  s3_client.py  settings.py
backend/models/: __init__.py  _mixin.py  capability.py  department.py  employee.py  jd.py  okr.py  resume.py  task.py
backend/modules/: __init__.py
backend/tests/: agent_test.py  read_pdf_test.py
backend/utils/: document_parser.py  jd_matcher.py  llm_mock.py  logger_format_utils.py
extra/salary_report/: .gitignore  MULTI_MONTH_REPORT_DATA.md  README.md  pubspec.yaml  salary_report_template.docx  多季度报告.md  多年度报告.md  季度报告.md  年度报告.md
extra/salary_report/rust/: Cargo.toml
extra/salary_report/rust/src/: frb_generated.rs  lib.rs  test.rs
extra/salary_report/rust/src/api/: auth_api.rs  mod.rs  salary.rs  salary_api.rs  simple.rs
extra/salary_report/rust/src/auth/: auth_ai.rs  mod.rs
extra/salary_report/rust/src/salary_caculate/: mod.rs  salary.rs
frontend/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  pubspec.yaml  tsconfig.json
frontend/lib/: main.dart
frontend/src/: App.css  App.jsx  App.simple.css  App.tsx  main.tsx  vite.env.d.ts
hr-app/: .env.example  main.py  requirements.txt
hr-app/app/: config.py  db.py
testdata/: test_employees.xlsx  test_jd.txt
tools/: create_test_excel.py
(+337 files in other folders)
