[package]
name = "rust_lib_salary_report"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]


[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
] }

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.99"
base64 = "0.22.1"
flutter_rust_bridge = "=2.11.1"
hex = "0.4.3"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
umya-spreadsheet = "2.3.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
